--- a/index.html
+++ b/index.html
@@ -12,10 +12,11 @@ td { text-align: center; padding: 25;}
 <center>
 <br><br><br><br>
 <table>
-<tr><td>Hieu iceTea - Navigation</td></tr>
+<tr><td style="font-size: 125%; color: #004D40;">Hieu iceTea - Navigation</td></tr>
 <tr><td>Cloud-Kitchen: <b><a target="_blank" href="http://cloud-kitchen.Hieu-iceTea.epizy.com">cloud-kitchen.Hieu-iceTea.epizy.com</a></b></td></tr>
 <tr><td>ARS.Codedy: <b><a target="_blank" href="http://ars.Hieu-iceTea.epizy.com">ars.Hieu-iceTea.epizy.com</a></b></td></tr>
-<tr><td>Blog: <b><a target="_blank" href="http://Hieu-iceTea-dev.blogspot.com">Hieu-iceTea-dev.blogspot.com</a></b></td></tr>
+<tr><td>Shop-Mobile: <b><a target="_blank" href="http://shop-mobile-vp.hieu-icetea.epizy.com">shop-mobile-vp.hieu-icetea.epizy.com</a></b></td></tr>
+<tr><td>Blog: <b><a target="_blank" href="http://codedy-dev.blogspot.com">Codedy-dev.blogspot.com</a></b></td></tr>
 </table>
 <br><br>
 </center>
