--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<title>Codedy Navigation</title>
+<title>Hieu iceTea - Navigation</title>
 <style>
 * { font-family: verdana; font-size: 10pt; COLOR: gray; }
 b { font-weight: bold; }
